<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">
        <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <EditText
            android:id="@+id/edit_provider_name"
            android:hint="@string/hint_provider_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/edit_product_image"
                android:layout_width="@dimen/editor_image_width"
                android:layout_height="@dimen/editor_image_width"
                android:contentDescription="@string/content_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_black_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/edit_product_image"
                android:orientation="vertical">
            <Button
                android:id="@+id/edit_add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add image" />
            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_photo_camera_24"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">
                <EditText
                    android:id="@+id/edit_price"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:padding="@dimen/editor_supplier_padding"
            android:text="Supplier"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

</ScrollView>